--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "new": "tsx scripts/create-component/index.ts"
   },
   "dependencies": {
+    "@ant-design/pro-components": "^2.8.1",
     "@element-plus/icons-vue": "^2.3.1",
     "@plus-pro-components/components": "workspace:*",
     "@plus-pro-components/constants": "workspace:*",
@@ -61,7 +62,7 @@
     "lodash-es": "^4.17.21",
     "sortablejs": "^1.15.0",
     "vite": "^5.2.9",
-    "vue": "^3.4.21",
+    "vue": "^3.2.0",
     "vue-tsc": "1.8.27"
   },
   "devDependencies": {
