--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -10,5 +10,5 @@
     "allowSyntheticDefaultImports": true
   },
   "include": ["scripts", "packages/utils/build.config.ts"],
-  "exclude": ["**/__tests__/**", "**/tests/**", "**/dist"]
+  "exclude": ["**/__test__/**", "**/test/**", "**/dist"]
 }
